--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Simple AR website</title>
 </head>
 <body>
-    <model-viewer src="asset/Chalet.glb" ></model-viewer>
+    <model-viewer src="asset/Chalet.glb" camera-controls auto-rotate ar ios-src="" ></model-viewer>
 </body>
 <style>
     model-viewer{
