--- a/index.html
+++ b/index.html
@@ -7,14 +7,9 @@
     <title>Simple AR website</title>
 </head>
 <body>
-    <model-viewer src="asset/Chalet.glb" camera-controls auto-rotate ar ar-modes="scene-viewer quick-look" camera-controls touch-action="pan-y" ></model-viewer>
+    <model-viewer src="asset/Chalet.glb" camera-controls auto-rotate ar camera-controls touch-action="pan-y" ar-placement="floor"></model-viewer>
 </body>
 <style>
-    model-viewer{
-        width: 400px;
-        height: 600px;
-        margin: 0 auto;
-    }
 
 </style>
 </html>
