--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Simple AR website</title>
 </head>
 <body>
-    <model-viewer src="asset/Chalet.glb" camera-controls auto-rotate ar camera-controls touch-action="pan-y" ar-placement="floor"></model-viewer>
+    <model-viewer src="asset/Chalet.glb" camera-controls auto-rotate ar camera-controls touch-action="pan-y"></model-viewer>
 </body>
 <style>
 
