--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Simple AR website</title>
 </head>
 <body>
-    <model-viewer src="asset/Chalet.glb" camera-controls auto-rotate ar camera-controls touch-action="pan-y"></model-viewer>
+    <model-viewer src="asset/Chalet.glb" camera-controls auto-rotate ar camera-controls touch-action="pan-y" ar-scale="fixed"
+              ar-modes="webxr scene-viewer quick-look" shadow-intensity="1"></model-viewer>
 </body>
 <style>
 
