--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
               ar-modes="webxr scene-viewer quick-look" shadow-intensity="1"></model-viewer>
 </body>
 <style>
-
+    model-viewer{
+        width: 400px;
+        height: 600px;
+        margin: 0 auto;
+    }
 </style>
 </html>
