--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.5.0/model-viewer.min.js"></script>
+    <!--<script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.5.0/model-viewer.min.js"></script>-->
+    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js"></script>
     <title>Simple AR Website</title>
 </head>
 <body>
@@ -13,13 +14,7 @@
                   ar 
                   camera-controls 
                   ar-scale="auto" 
-                  ar-modes="webxr scene-viewer quick-look" 
-                  shadow-intensity="1" 
-                  field-of-view="45deg" 
-                  min-field-of-view="10deg" 
-                  max-field-of-view="60deg" 
-                  camera-target="0m 1m 0m"  <!-- Adjusted to place the model slightly higher -->
-                  style="width: 400px; height: 600px; transform: translateY(-1.5m) scale(0.5);"> <!-- Adjusted scale and position -->
+                  
     </model-viewer>
 </body>
 <style>
