--- a/index.html
+++ b/index.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--<script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.5.0/model-viewer.min.js"></script>-->
-    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js"></script>
+    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
     <title>Simple AR Website</title>
 </head>
 <body>
-    <model-viewer id="viewer" 
-                  src="asset/Chalet.glb" 
-                  auto-rotate 
-                  ar 
-                  camera-controls 
-                  ar-scale="auto" 
-                  
-    </model-viewer>
+    <model-viewer src="asset/Chalet.glb" 
+              ios-src="asset/Chalet.usdz"
+              alt="A 3D model of a house"
+              ar
+              auto-rotate
+              camera-controls></model-viewer>
 </body>
 <style>
     model-viewer {
