--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
               alt="A 3D model of a house"
               ar
               auto-rotate
+              loading = "lazy"
+              ar-scale="auto"
+              ar-modes="webxr scene-viewer"
               camera-controls></model-viewer>
 </body>
 <style>
