--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
     <title>Simple AR Website</title>
 </head>
 <body>
-    <model-viewer src="asset/Chalet.glb" 
-              ios-src="asset/Chalet.usdz"
-              alt="A 3D model of a house"
-              ar
-              auto-rotate
-              loading = "lazy"
-              ar-scale="auto"
-              ar-modes="webxr scene-viewer"
-              camera-controls></model-viewer>
+    <model-viewer src="Chalet.glb" ar ar-modes="scene-viewer webxr quick-look" camera-controls tone-mapping="neutral" poster="poster.webp" shadow-intensity="1">
+    <div class="progress-bar hide" slot="progress-bar">
+        <div class="update-bar"></div>
+    </div>
+    <button slot="ar-button" id="ar-button">
+        View in your space
+    </button>
+    <div id="ar-prompt">
+        <img src="https://modelviewer.dev/shared-assets/icons/hand.png">
+    </div>
+</model-viewer>
 </body>
 <style>
     model-viewer {
