--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Simple AR Website</title>
 </head>
 <body>
-    <model-viewer src="Chalet.glb" ar ar-modes="scene-viewer webxr quick-look" camera-controls tone-mapping="neutral" shadow-intensity="1">
+    <model-viewer src="asset/Chalet.glb" ar ar-modes="scene-viewer webxr quick-look" camera-controls tone-mapping="neutral" shadow-intensity="1">
     <div class="progress-bar hide" slot="progress-bar" auto-rotate>
         <div class="update-bar"></div>
     </div>
