--- a/index.html
+++ b/index.html
@@ -3,24 +3,91 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--<script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.5.0/model-viewer.min.js"></script>-->
+    <!-- Use the latest model-viewer library -->
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
     <title>Simple AR Website</title>
 </head>
 <body>
-    <model-viewer src="asset/Chalet.glb" ar ar-modes="scene-viewer webxr quick-look" camera-controls tone-mapping="neutral" poster="poster.webp" shadow-intensity="1" ar-scale="auto" scale="0.5 0.5 0.5">
-    <div class="progress-bar hide" slot="progress-bar" auto-rotate>
-        <div class="update-bar"></div>
-    </div>
-</model-viewer>
+    <model-viewer id="viewer" 
+                  src="asset/Chalet.glb" 
+                  ar 
+                  ar-modes="scene-viewer webxr quick-look" 
+                  camera-controls 
+                  tone-mapping="neutral" 
+                  poster="poster.webp" 
+                  shadow-intensity="1" 
+                  ar-scale="auto"
+                  ar-placement="floor" <!-- Ensures model is anchored on the floor -->
+                  scale="0.3 0.3 0.3" <!-- Adjusted scale -->
+                  auto-rotate 
+                  camera-target="0m 1m 0m" <!-- Adjusted camera target position -->
+                  style="width: 100%; height: 100%;"
+                  touch-action="pan-y">
+        <div class="progress-bar hide" slot="progress-bar">
+            <div class="update-bar"></div>
+        </div>
+    </model-viewer>
 
+    <!-- Optional button to enter AR mode manually -->
+    <button id="ar-button" onclick="enterAR()">Enter AR Mode</button>
+
+    <script>
+        // Optional: Manually control AR session
+        function enterAR() {
+            const modelViewer = document.querySelector("#viewer");
+            modelViewer.activateAR();
+        }
+
+        // Optional: Handle AR session events for debugging
+        document.querySelector("#viewer").addEventListener("ar-status", (event) => {
+            console.log("AR Status: ", event.detail.status);
+            if (event.detail.status === 'failed') {
+                console.warn("AR initialization failed. Please check your device's AR capabilities.");
+            }
+        });
+
+        // Ensure scale and positioning resets when entering AR mode
+        document.querySelector("#viewer").addEventListener("ar-tracking", (event) => {
+            if (event.detail.status === 'not-tracking') {
+                console.warn("AR tracking lost. Trying to re-initialize tracking.");
+            }
+        });
+    </script>
 </body>
 <style>
     model-viewer {
         width: 400px;
         height: 600px;
         margin: 0 auto;
+        --poster-color: transparent;
+    }
+
+    .progress-bar.hide {
+        display: none;
+    }
+
+    .update-bar {
+        width: 100%;
+        height: 4px;
+        background: linear-gradient(to right, #0a74da, #00c6ff);
+    }
+
+    button {
+        position: absolute;
+        bottom: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        padding: 10px 20px;
+        font-size: 16px;
+        background-color: #0a74da;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+
+    button:hover {
+        background-color: #005bb5;
     }
 </style>
 </html>
-
