--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                   poster="poster.webp" 
                   shadow-intensity="1" 
                   ar-scale="auto"
-                  ar-placement="floor" <!-- Ensures model is anchored on the floor -->
-                  scale="0.3 0.3 0.3" <!-- Adjusted scale -->
+                  ar-placement="floor" 
+                  scale="0.3 0.3 0.3" 
                   auto-rotate 
-                  camera-target="0m 1m 0m" <!-- Adjusted camera target position -->
+                  camera-target="0m 1m 0m" 
                   style="width: 100%; height: 100%;"
                   touch-action="pan-y">
         <div class="progress-bar hide" slot="progress-bar">
